deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinic-deploy
  labels:
    myversion: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clinic-front
  template:
    metadata:
      labels:
        app: clinic-front
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: springboot
          image: ghcr.io/hiniaibel/spring-petclinic:4.0.0-SNAPSHOT
